# encoding_rs

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  Ideas.md  LICENSE-MIT  README.md  build.rs  generate-encoding-data.py
.github/workflows/: ci.yml
ci/: miri.sh
fuzz/: Cargo.toml
fuzz/fuzzers/: fuzz_encodings.rs  fuzz_labels.rs  fuzz_mem.rs
include/: encoding_rs_cpp.h  encoding_rs_statics.h
src/: ascii.rs  big5.rs  data.rs  euc_jp.rs  euc_kr.rs  ffi.rs  gb18030.rs  handles.rs  iso_2022_jp.rs  lib.rs  macros.rs  mem.rs  replacement.rs  shift_jis.rs  simd_funcs.rs  single_byte.rs  stream.rs  test_labels_names.rs  testing.rs  utf_16.rs  utf_8.rs  utf_8_core.rs  variant.rs  x_user_defined.rs
src/test_data/: iso_2022_jp_out_ref.txt
tests/: big5.rs  euc_jp.rs  euc_kr.rs  gb18030.rs  iso_2022_jp.rs  shift_jis.rs  streaming_empty_chunks.rs  test_data.rs
tests/test_data/: big5.rs  euc_jp.rs  euc_kr.rs  gb18030.rs  iso_2022_jp.rs  shift_jis.rs
