[package]
name = "encoding_rs"
description = "A Gecko-oriented implementation of the Encoding Standard"
version = "0.4.0"
authors = ["Henri Sivonen <hsivonen@hsivonen.fi>"]
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/encoding_rs/"
homepage = "https://docs.rs/encoding_rs/"
repository = "https://github.com/hsivonen/encoding_rs"
keywords = ["encoding", "web", "unicode", "charset"]

[features]
simd-accel = ["simd"]
no-static-ideograph-encoder-tables = []
parallel-utf8 = ["rayon"]

[dependencies]
cfg-if = "0.1.0"
simd = { version = "0.1.1", optional = true }
rayon = { version = "0.6.0", optional = true }

[profile.release]
lto = true
