[package]
name = "encoding_rs"
description = "A Gecko-oriented implementation of the Encoding Standard"
version = "0.8.6" # Remember to keep html_root_url in lib.rs in sync!
authors = ["Henri Sivonen <hsivonen@hsivonen.fi>"]
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/encoding_rs/"
homepage = "https://docs.rs/encoding_rs/"
repository = "https://github.com/hsivonen/encoding_rs"
keywords = ["encoding", "web", "unicode", "charset"]
categories = ["text-processing", "encoding", "web-programming", "email"]

[badges]
travis-ci = { repository = "hsivonen/encoding_rs" }

[features]
simd-accel = ["packed_simd", "packed_simd/into_bits", "packed_simd/coresimd"]
less-slow-kanji-encode = []
less-slow-big5-hanzi-encode = []
less-slow-gb-hanzi-encode = []

[dependencies]
cfg-if = "0.1.0"
packed_simd = { version = "0.3.0", optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_derive = "1.0"
bincode = "0.8"
serde_json = "1.0"

[profile.release]
lto = true
