[package]
name = "encoding_rs"
description = "A Gecko-oriented implementation of the Encoding Standard"
version = "0.8.10" # Remember to keep html_root_url in lib.rs in sync!
authors = ["Henri Sivonen <hsivonen@hsivonen.fi>"]
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/encoding_rs/"
homepage = "https://docs.rs/encoding_rs/"
repository = "https://github.com/hsivonen/encoding_rs"
keywords = ["encoding", "web", "unicode", "charset"]
categories = ["text-processing", "encoding", "web-programming", "email"]
edition = "2018"

[badges]
travis-ci = { repository = "hsivonen/encoding_rs" }

[features]
simd-accel = ["simd"]
less-slow-kanji-encode = []
less-slow-big5-hanzi-encode = []
less-slow-gb-hanzi-encode = []
fast-hangul-encode = []
fast-hanja-encode = []
fast-kanji-encode = []
fast-gb-hanzi-encode = []
fast-big5-hanzi-encode = []
fast-legacy-encode = ["fast-hangul-encode",
                      "fast-hanja-encode",
                      "fast-kanji-encode",
                      "fast-gb-hanzi-encode",
                      "fast-big5-hanzi-encode"]

[dependencies]
cfg-if = "0.1.0"
simd = { version = "0.2.3", optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_derive = "1.0"
bincode = "0.8"
serde_json = "1.0"

[profile.release]
lto = true
